examples/test/testpolicy11320.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11320
  namespace: namespace118
spec:
  podSelector:
    matchLabels:
      key39: value12
      key43: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value47
          key13: value40
      podSelector:
        matchLabels:
          key41: value29
          key23: value26
